# rider-app

./: pyproject.toml
rider/: app.py  distance.py  files.py  get_data.py
rider/rider/: app.py  plotting.py  routes.py
rider/tests/: test_rider.py
